# Audela

trunk/audela/src/: Makefile  Makefile.defs.in  Makefile.rules  aclocal.m4  audela.dsw  audela.sln  camera.h  configure  configure.in  readme.1.txt  readme.svn.txt  readme.txt
trunk/audela/src/audela/audela/linux/: Makefile
trunk/audela/src/audela/audela/src/: lapin.c
trunk/audela/src/audela/audela/vc60/: audela.dsp  audela.dsw
trunk/audela/src/audela/audela/vc90/: audela.vcproj
trunk/audela/src/audela/libak/linux/: Makefile
trunk/audela/src/audela/libak/src/: ak_2.c  ak_3.c  ak_4.c  aktcl.h  aktcl_1.c  chealpix.c  libak.c
trunk/audela/src/audela/libak/vc60/: libak.dsp
trunk/audela/src/audela/libak/vc90/: libak.vcproj
trunk/audela/src/audela/libaudela/html/: laupd-en.htm
trunk/audela/src/audela/libaudela/linux/: Makefile
trunk/audela/src/audela/libaudela/src/: AllExceptions.h  MinimisationAndLinearAlgebraicSystems.cpp  MinimisationAndLinearAlgebraicSystems.h  PsfFitter.cpp  PsfFitter.h  buf_tcl.cpp  cbuffer.cpp  cbuffer.h  cerror.cpp  cerror.h  cfile.cpp  cfile.h  cpixels.cpp  cpixels.h  cpixelsgray.cpp  cpixelsgray.h  cpixelsrgb.cpp  cpixelsrgb.h  cpool.cpp  cpool.h  cvisu.cpp  fitskw.cpp  fitskw.h  libstd.cpp  libstd.h  ping.cpp  pool_tcl.cpp  psfimcce.cpp  psfimcce.h  psfimcce_funcs.cpp  psfimcce_nr.cpp  setip.c  setip.h  thread.cpp  tt.cpp  visu_tcl.cpp
trunk/audela/src/audela/libaudela/vc60/: libaudela.dsp
trunk/audela/src/audela/libaudela/vc90/: libaudela.vcproj
trunk/audela/src/audela/libaudelatk/linux/: Makefile
trunk/audela/src/audela/libaudelatk/src/: cvisu.cpp  cvisu.h  libaudelatk.cpp  visu_tcl.cpp
trunk/audela/src/audela/libaudelatk/vc60/: libaudelatk.dsp
trunk/audela/src/audela/libcatalog/: .project
trunk/audela/src/audela/libcatalog/linux/: Makefile
trunk/audela/src/audela/libcatalog/src/: cs2mass.c  cs2mass.h  cstycho.c  cstycho.cpp  csucac.h  csucac2.c  csucac3.c  csucac4.c  csusno.h  csusnoa2.c  cswfibc.c  cswfibc.h  libcatalog.c  libcatalog.cpp  libcatalog.h  nomad1.c  nomad1.h  ppmx.c  ppmx.h  ppmxl.c  useful.c  useful.h
trunk/audela/src/audela/libcatalog/vc90/: libcatalog.vcproj
trunk/audela/src/audela/libgsltcl/linux/: Makefile
trunk/audela/src/audela/libgsltcl/src/: gsltcl.h  gsltcltcl_1.c  libgsltcl.c
trunk/audela/src/audela/libgsltcl/vc60/: libgsltcl.dsp
trunk/audela/src/audela/libgsltcl/vc90/: libgsltcl.vcproj
trunk/audela/src/audela/libgzip/src/: xx_1.c  xxtcl.h  xxtcl_1.c
trunk/audela/src/audela/libgzip/vc60/: libgzip.dsp
trunk/audela/src/audela/libjm/linux/: Makefile
trunk/audela/src/audela/libjm/src/: calaphot.cpp  calaphot.h  calaphot_tcl.cpp  divers_tcl.cpp  fourier.h  fourier_calculs.cpp  fourier_images.cpp  fourier_services.cpp  fourier_tcl.cpp  horloge.cpp  horloge.h  jm.h  jm_c_tcl.c  jm_temps.c  libjm.cpp  libjm.h
trunk/audela/src/audela/libjm/vc60/: libjm.dsp  libjm.dsw
trunk/audela/src/audela/libjm/vc90/: libjm.vcproj
trunk/audela/src/audela/libmc/html/: mcmo1-fr.htm  mcpoi_fr.htm  mcskd_fr.htm  mcusr_fr.htm  mcusr_us.htm
trunk/audela/src/audela/libmc/linux/: Makefile
trunk/audela/src/audela/libmc/src/: libmc.c  libmc.h  libmc2.c  libmc3.c  libmc_angles.c  libmc_dates.c  mc.h  mc_cart1.c  mc_cata1.c  mc_corc1.c  mc_elp10.c  mc_file1.c  mc_intg1.c  mc_macr2.c  mc_macr3.c  mc_menu1.c  mc_modl1.c  mc_nora1.c  mc_orbi2.c  mc_plnt3.c  mc_scdl1.c  mc_time1.c  mc_util1.c  mc_util2.c
trunk/audela/src/audela/libmc/vc60/: libmc.dsp
trunk/audela/src/audela/libml/src/: libml.c  libml.h  ml.h  ml_1.c  ml_2.c  ml_3.h  ml_morpho_math.h  mltcl.h  mltcl_1.c
trunk/audela/src/audela/libml/vc60/: libml.def  libml.dsp  libml.ncb
trunk/audela/src/audela/libml/vc90/: libml.vcproj
trunk/audela/src/audela/librgb/html/: rgbus-fr.htm
trunk/audela/src/audela/librgb/src/: rgbtcl.h  rgbtcl_1.c
trunk/audela/src/audela/librgb/vc60/: librgb.dsw
trunk/audela/src/audela/libros/src/: libros.cpp  libros.h  rostcl_1.cpp
trunk/audela/src/audela/libros/vc60/: libros.dsp  libros.dsw
trunk/audela/src/audela/libros/vc90/: libros.vcproj
trunk/audela/src/audela/libsext/src/: sexttcl_1.c
trunk/audela/src/audela/libtt/dec/: makelib.cc
trunk/audela/src/audela/libtt/html/: astm1-fr.htm  ttmo1-fr.htm  ttus1-fr.htm
trunk/audela/src/audela/libtt/linux/: Makefile
trunk/audela/src/audela/libtt/macos/: Makefile
trunk/audela/src/audela/libtt/src/: fs_fsio1.c  fs_macr1.c  fs_macr3.c  tt.h  tt_fits1.c  tt_fits2.c  tt_fits4.c  tt_fsio2.c  tt_poin1.c  tt_poin2.c  tt_seri1.c  tt_seri2.c  tt_seri3.c  tt_seri4.c  tt_seri5.c  tt_seri6.c  tt_stac1.c  tt_stac2.c  tt_time1.c  tt_user2.c  tt_user2.h  tt_user4.c  tt_user4.h  tt_user5.c  tt_user5.h  tt_util1.c  tt_util2.c  tt_util3.c  tt_util4.c
trunk/audela/src/audela/libtt/vc60/: libtt.dsp
trunk/audela/src/audela/libtt/vc90/: libtt.vcproj
trunk/audela/src/audela/libyd/linux/: Makefile
trunk/audela/src/audela/libyd/src/: cstycho.c  cstycho.h  csucac.h  csucac2.c  csucac3.c  libyd.c  ydtcl.h  ydtcl_1.c
trunk/audela/src/audela/libyd/vc90/: libyd.vcproj
trunk/audela/src/contrib/: Makefile
trunk/audela/src/contrib/av4l/ffmpeg-0.8.5/: config.fate  config.mak
trunk/audela/src/contrib/av4l/linux/: Makefile
trunk/audela/src/contrib/av4l/src/: avi.c  grab.c
trunk/audela/src/include/: sysexp.h  system.h  version.h
trunk/audela/src/include/libcam/: libcam.h  libstruc.h
trunk/audela/src/include/liblink/: liblink.h
trunk/audela/src/include/libtel/: libstruc.h  libtel.h
trunk/audela/src/libcam/: libcam.c
trunk/audela/src/libcam/libcamth/: Miss01.bas
trunk/audela/src/libcam/libepix/: README
trunk/audela/src/liblink/: liblink.cpp
trunk/audela/src/libtel/: libtel.c  libtel.cpp  util.c
trunk/audela/src/packaging/: make_packages.sh
trunk/audela/src/tools/: audela_svn_raspberry_fr.odp  audela_svn_windows_fr.odt  audela_svn_windows_linux_en.odp
trunk/audela/src/tools/innosetup/: after.txt  audela-1.3.0.iss  audela-1.4.0-beta2.iss  before.txt  licence.txt  listfiles.tcl
trunk/audela/src/tools/packaging/: daily_package.sh  make_packages.sh
(+8253 files in other folders)
